--- a/scripts/template.ini
+++ b/scripts/template.ini
@@ -24,8 +24,10 @@ collabCertPath=~/.gnos/client.jks
 
 # END NEW ITEMS
 
-# basic setup
+# clean up data after upload?
 cleanup=true
+
+# basic setup
 coresAddressable=[% coresAddressable  %]
 memHostMbAvailable=[% memHostMbAvailable %]
 seqware-output-lines-number=50
@@ -38,18 +40,20 @@ JSONxmlHash={{xmlhash}}
 GITemail=nbyrne.oicr@gmail.com
 GITname="ICGC Automation"
 
+# Git Key
 # Place this key in your launcher's .gnos folder, it will get copied to ~/.gnos on your worker
 GITPemFile=~/.gnos/github.pem
 
+# GNOS Key
 # Place this key in your launcher's .gnos folder, it will get copied to ~/.gnos on your worker
 pemFile=~/.gnos/gnos.pem
 
-# A comma seperated list of gnosServers for each analysisID
+# A comma seperated list of gnosServers where the analysisId lives
 gnosServers={{gnosserver}}
 
-# Comma seperated list of analysisIds
+# Comma seperated list of analysisIds (In our current implementation this should just be one id)
 analysisIds={{analysisid}}
 
-# Skipping
+# Skipping (Testing only)
 skipdownload=False
 skipupload=False
