--- a/scripts/template.ini
+++ b/scripts/template.ini
@@ -20,7 +20,7 @@ collabToken=[YOUR TOKEN HERE]
 collabHost=ec2-52-2-45-147.compute-1.amazonaws.com
 
 # Place this key in your launcher's .gnos folder, it will get copied to ~/.gnos on your worker
-collabCertPath=~/.gnos/client.jks
+collabCertPath=/home/ubuntu/.gnos/client.jks
 
 # END NEW ITEMS
 
@@ -42,11 +42,11 @@ GITname="ICGC Automation"
 
 # Git Key
 # Place this key in your launcher's .gnos folder, it will get copied to ~/.gnos on your worker
-GITPemFile=~/.gnos/github.pem
+GITPemFile=/home/ubuntu/.gnos/github.pem
 
 # GNOS Key
 # Place this key in your launcher's .gnos folder, it will get copied to ~/.gnos on your worker
-pemFile=~/.gnos/gnos.pem
+pemFile=/home/ubuntu/.gnos/gnos.pem
 
 # A comma seperated list of gnosServers where the analysisId lives
 gnosServers={{gnosserver}}
