--- a/scripts/template.ini
+++ b/scripts/template.ini
@@ -36,7 +36,7 @@ seqware-output-lines-number=50
 JSONrepo="git@github.com:ICGC-TCGA-PanCancer/s3-transfer-operations.git"
 JSONfolderName=testing
 JSONfileName={{filename}}
-QUEUEhash={{hashpipe}}
+QUEUEhash={{hash}}
 JSONxmlHash={{xmlhash}}
 GITemail=nbyrne.oicr@gmail.com
 GITname="ICGC Automation"
