--- a/scripts/template.ini
+++ b/scripts/template.ini
@@ -12,8 +12,8 @@ output_prefix=./
 donor_id={{donorid}}
 project_code={{projectcode}}
 
-# memory for upload to SFTP/S3
-duckJobMem=16000
+# Docker Configuration
+gnosDockerName=pancancer/pancancer_upload_download:1.3
 
 # Collab Upload Tool Config
 collabToken=[YOUR TOKEN HERE]
