--- a/scripts/template.ini
+++ b/scripts/template.ini
@@ -15,9 +15,18 @@ project_code={{projectcode}}
 # Docker Configuration
 gnosDockerName=pancancer/pancancer_upload_download:1.3
 
+# Docker Configuration
+gnosDockerName=pancancer/pancancer_upload_download:1.3
+collabDockerName=icgc/cli:latest
+
 # Collab Upload Tool Config
-collabToken=[YOUR TOKEN HERE]
+collabToken={{token}}
 collabHost=ec2-52-2-45-147.compute-1.amazonaws.com
+
+# S3 Collab Tool Bucket Logging Settings
+collabLogBucket=
+collabLogKey=[ Role Account S3 Key ]
+collabLogSecret=[ Role Account S3 Secret]
 
 # Place this key in your launcher's .gnos folder, it will get copied to ~/.gnos on your worker
 collabCertPath=/home/ubuntu/.gnos/client.jks
