--- a/scripts/template.ini
+++ b/scripts/template.ini
@@ -1,4 +1,4 @@
-﻿﻿# the output directory is a convention used in many workflows to specify a relative output path
+﻿# the output directory is a convention used in many workflows to specify a relative output path
 output_dir=seqware-results
 # the output_prefix is a convention used to specify the root of the absolute output path or an S3 bucket name
 # you should pick a path that is available on all cluster nodes and can be written by your user
@@ -18,10 +18,10 @@ collabDockerName=icgc/cli:1.1
 
 # Collab Upload Tool Config
 collabToken={{token}}
-collabHost=ec2-52-2-45-147.compute-1.amazonaws.com
+collabHost=objectstore.cancercollaboratory.org
 
 # S3 Collab Tool Bucket Logging Settings
-collabLogBucket=
+collabLogBucket=s3://oicr.icgc.audit/workflow/
 collabLogKey=[ Role Account S3 Key ]
 collabLogSecret=[ Role Account S3 Secret]
 
@@ -41,6 +41,8 @@ seqware-output-lines-number=50
 # Git Repo for JSON - Specify the url to pull the REPO, the folder inside the REPO to use for tracking, and the filename that is being tracked
 JSONrepo="git@github.com:ICGC-TCGA-PanCancer/s3-transfer-operations.git"
 JSONfolderName=testing
+#JSONfolderName=pre-production
+#JSONfolderName=s3-transfer-jobs
 JSONfileName={{filename}}
 QUEUEhash={{hash}}
 JSONxmlHash={{xmlhash}}
